Prevent display text from wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body {
   margin-bottom: 32px;
   box-shadow: inset 2px 2px 10px var(--dark-shadow);
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .calculator .previous-output {
